design done phase 1

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -11,5 +11,27 @@
   "language": "Language",
   "play": "Play",
   "selectCategory": "Select Category",
-  "library": "Library"
+  "library": "Library",
+  "points": "Points",
+  "dailyChallenge": "Daily Challenge",
+  "shop": "Shop",
+  "searchWords": "Search your words...",
+  "mastered": "Mastered",
+  "learning": "Learning",
+  "newWord": "New",
+  "level": "Level",
+  "score": "Score",
+  "hint": "Hint",
+  "shuffle": "Shuffle",
+  "allowSpecialChars": "Allow Special Characters",
+  "allowSpecialCharsDesc": "Include words with hyphens and apostrophes",
+  "theme": "Theme",
+  "about": "About",
+  "filter": "Filter",
+  "favoritesOnly": "Favorites Only",
+  "allCategories": "All Categories",
+  "noWordsLearnt": "No words learnt yet!",
+  "noResults": "No results found.",
+  "undo": "UNDO",
+  "removed": "Removed"
 }
