--- a/lib/l10n/app_es.arb
+++ b/lib/l10n/app_es.arb
@@ -1,5 +1,7 @@
 {
   "appTitle": "WordLearn",
+  "search": "Buscar",
+  "minigames": "Minijuegos",
   "gameWon": "You Won!",
   "gameOver": "Game Over!",
   "settings": "Settings",
@@ -30,5 +32,17 @@
   "noWordsLearnt": "No words learnt yet!",
   "noResults": "No results found.",
   "undo": "UNDO",
-  "removed": "Removed"
+  "removed": "Removed",
+  "dailyBonusTitle": "Daily Bonus! 🎉",
+  "dailyBonusContent": "You maintained a {streak} day streak!",
+  "claim": "Claim",
+  "earnedDiamonds": "Earned {amount} Diamonds!",
+  "resumeGame": "Resume Game",
+  "startNewGame": "Start New Game",
+  "categories": "Categories",
+  "wordLength": "Word Length",
+  "noChallengesToday": "No challenges today!",
+  "challengeLevel": "Challenge {number}: {length} Letters",
+  "signOut": "Cerrar sesión",
+  "guest": "Invitado"
 }
